# milvus_orm

./: .gitignore  INSTALLATION.md  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.gitea/workflows/: build.yaml
examples/: advanced_usage.py  basic_usage.py
milvus_orm/: __init__.py  analyzers.py  client.py  exceptions.py  fields.py  models.py  query.py  utils.py
src/milvus_orm/: __init__.py  connections.py  fields.py  models.py  query.py
tests/: test_basic.py
